--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,10 +6,10 @@ manifests:
 build:
   local:
     push: false
-  googleCloudBuild:
-    projectId: arched-cabinet-419817
+  # googleCloudBuild:
+  #   projectId: arched-cabinet-419817
   artifacts:
-      - image: bagasysf/auth
+    - image: bagasysf/auth
       # - image: us.gcr.io/arched-cabinet-419817/auth
       context: auth
       docker:
