--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: auth
-          image: bagasysf/auth
-          # image: us.gcr.io/arched-cabinet-419817/auth
+          # image: bagasysf/auth
+          image: us.gcr.io/arched-cabinet-419817/auth
 ---
 apiVersion: v1
 kind: Service
